src/mcp/test/fixtures/valid/config-dprint-valid.fixture.ts
/**
 * @fixture valid
 * @rule config-enforcement
 * @description Valid dprint config
 * @expectedViolations 0
 * @simulatedPath dprint.json
 */
{"lineWidth": 157, "useTabs": false, "indentWidth": 2}
